--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             "logo": "https://listsync.app/logo.png",
             "contactPoint": {
                 "@type": "ContactPoint",
-                "email": "hello@listsync.app",
+                "email": "listsync@paauw.dev",
                 "contactType": "Customer Service"
             }
         }
@@ -680,7 +680,7 @@
             <p>Stop copying tasks manually between Notion and Slack. Two-way real-time sync keeps your databases and
                 Lists perfectly synchronized — no more double work.</p>
             <div class="hero-cta">
-                <a href="mailto:hello@listsync.app?subject=Early%20Access%20Request&body=Hi,%0D%0A%0D%0AI'm interested in early access to ListSync.%0D%0A%0D%0AName:%0D%0ACompany:%0D%0ATeam size:"
+                <a href="mailto:listsync@paauw.dev?subject=Early%20Access%20Request&body=Hi,%0D%0A%0D%0AI'm interested in early access to ListSync.%0D%0A%0D%0AName:%0D%0ACompany:%0D%0ATeam size:"
                    class="email-button">Request Early Access</a>
                 <p class="subtext">Coming soon • €50/month</p>
             </div>
@@ -798,7 +798,7 @@
                     <li><span class="checkmark">✓</span> Secure encryption</li>
                     <li><span class="checkmark">✓</span> Cancel anytime</li>
                 </ul>
-                <a href="mailto:hello@listsync.app?subject=Early%20Access%20Request&body=Hi,%0D%0A%0D%0AI'm interested in early access to ListSync.%0D%0A%0D%0AName:%0D%0ACompany:%0D%0ATeam size:"
+                <a href="mailto:listsync@paauw.dev?subject=Early%20Access%20Request&body=Hi,%0D%0A%0D%0AI'm interested in early access to ListSync.%0D%0A%0D%0AName:%0D%0ACompany:%0D%0ATeam size:"
                    class="email-button" style="margin-top: 32px;">Request Early Access</a>
             </div>
         </div>
@@ -872,7 +872,7 @@
                 </div>
                 <div class="faq-item">
                     <h3>Can I try ListSync before paying?</h3>
-                    <p>We're currently in early access development. Request early access by emailing hello@listsync.app
+                    <p>We're currently in early access development. Request early access by emailing listsync@paauw.dev
                         and we'll notify you when the product launches. Early access users may receive special pricing
                         and priority support as we develop the platform.</p>
                 </div>
@@ -906,7 +906,7 @@
         <div class="container">
             <h2>Stop wasting hours on manual task updates</h2>
             <p>Automatically sync Notion databases with Slack lists in real-time</p>
-            <a href="mailto:hello@listsync.app?subject=Early%20Access%20Request&body=Hi,%0D%0A%0D%0AI'm interested in early access to ListSync.%0D%0A%0D%0AName:%0D%0ACompany:%0D%0ATeam size:"
+            <a href="mailto:listsync@paauw.dev?subject=Early%20Access%20Request&body=Hi,%0D%0A%0D%0AI'm interested in early access to ListSync.%0D%0A%0D%0AName:%0D%0ACompany:%0D%0ATeam size:"
                class="email-button">Request Early Access</a>
         </div>
     </section>
@@ -916,7 +916,7 @@
     <div class="container">
         <p>&copy; 2025 ListSync. Automatic Notion to Slack lists synchronization.</p>
         <div class="footer-links">
-            <a href="mailto:hello@listsync.app" class="footer-link">Contact</a>
+            <a href="mailto:listsync@paauw.dev" class="footer-link">Contact</a>
         </div>
         <p style="margin-top: 16px; font-size: 13px; opacity: 0.7; color: #9ca3af;">
             Sync Notion databases with Slack lists • Notion Slack lists integration • Two-way Notion Slack sync •
