--- a/index.html
+++ b/index.html
@@ -171,19 +171,6 @@
         }
     </script>
 
-    <!-- Google Analytics 4 (Replace with your measurement ID) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-
-      gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
-    </script>
-
     <style>
         * {
             margin: 0;
@@ -222,9 +209,7 @@
         .logo {
             font-size: 28px;
             font-weight: 800;
-            background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #1e40af;
         }
 
         .header-link {
@@ -256,9 +241,7 @@
         }
 
         .hero h1 .gradient-text {
-            background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #1e40af;
         }
 
         .hero p {
@@ -278,7 +261,7 @@
         }
 
         .email-button {
-            background: #10b981;
+            background: #059669;
             color: white;
             padding: 18px 48px;
             border-radius: 8px;
@@ -290,7 +273,7 @@
         }
 
         .email-button:hover {
-            background: #059669;
+            background: #047857;
             transform: translateY(-1px);
         }
 
@@ -334,7 +317,7 @@
         }
 
         .problem-card p {
-            color: #6b7280;
+            color: #374151;
             line-height: 1.7;
         }
 
@@ -376,7 +359,7 @@
         .feature-card:hover {
             transform: translateY(-4px);
             box-shadow: 0 12px 24px rgba(0, 0, 0, 0.08);
-            border-color: #6366f1;
+            border-color: #1e40af;
         }
 
         .feature-icon {
@@ -424,7 +407,7 @@
         .step-number {
             width: 64px;
             height: 64px;
-            background: #6366f1;
+            background: #1e40af;
             color: white;
             border-radius: 50%;
             display: flex;
@@ -474,7 +457,7 @@
         .price {
             font-size: 72px;
             font-weight: 900;
-            color: #6366f1;
+            color: #1e40af;
             margin: 24px 0;
             line-height: 1;
         }
@@ -592,20 +575,20 @@
         }
 
         .resource-link {
-            color: #6366f1;
+            color: #1e40af;
             text-decoration: none;
             font-weight: 600;
             transition: color 0.2s;
         }
 
         .resource-link:hover {
-            color: #4f46e5;
+            color: #1e3a8a;
         }
 
         /* Final CTA */
         .final-cta {
             padding: 100px 0;
-            background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
+            background: #1e40af;
             color: white;
             text-align: center;
         }
