--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         }
 
         .email-button {
-            background: #059669;
+            background: #047857;
             color: white;
             padding: 18px 48px;
             border-radius: 8px;
@@ -273,7 +273,7 @@
         }
 
         .email-button:hover {
-            background: #047857;
+            background: #065f46;
             transform: translateY(-1px);
         }
 
@@ -608,7 +608,7 @@
         footer {
             padding: 48px 0;
             background: #111827;
-            color: white;
+            color: #e5e7eb;
             text-align: center;
         }
 
@@ -621,7 +621,7 @@
         }
 
         .footer-link {
-            color: #9ca3af;
+            color: #d1d5db;
             text-decoration: none;
             font-size: 14px;
             transition: color 0.2s;
@@ -901,7 +901,7 @@
         <div class="footer-links">
             <a href="mailto:listsync@paauw.dev" class="footer-link">Contact</a>
         </div>
-        <p style="margin-top: 16px; font-size: 13px; opacity: 0.7; color: #9ca3af;">
+        <p style="margin-top: 16px; font-size: 13px; color: #9ca3af;">
             Sync Notion databases with Slack lists • Notion Slack lists integration • Two-way Notion Slack sync •
             Automate Notion to Slack lists • Bidirectional database synchronization
         </p>
