feat: add favicon and link it in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notion to Slack lists Sync Tool – Automatic Two-Way Database Integration | ListSync</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta name="description"
           content="Sync Notion databases with Slack lists automatically. Real-time two-way updates eliminate manual task copying. Connect unlimited databases for €50/month.">
     <meta name="keywords"
