style: update title, meta descriptions, and headings for clarity and SEO optimization

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notion to Slack lists Sync Tool – Automatic Two-Way Database Integration | ListSync</title>
+    <title>Bidirectional Slack lists Notion Sync – Two-Way Real-Time Integration | ListSync</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta name="description"
-          content="Sync Notion databases with Slack lists automatically. Real-time two-way updates eliminate manual task copying. Connect unlimited databases for €50/month.">
+          content="Two-way sync Slack lists and Notion databases automatically. Real-time bidirectional sync keeps tasks synchronized both directions. Slack lists to Notion and Notion to Slack lists integration for €50/month.">
     <meta name="keywords"
-          content="Notion Slack lists sync, sync Notion database with Slack lists, Notion to Slack lists integration, automate Notion Slack lists, bidirectional Notion Slack sync, two-way Notion Slack lists">
+          content="two way sync slack lists notion, bidirectional slack lists notion, slack lists notion integration, sync slack lists to notion, notion database to slack lists, slack lists to notion database, sync notion to slack lists, real-time slack lists notion sync, slack lists notion sync, create slack lists from notion, export slack lists to notion, automatic slack lists notion sync, notion to slack lists automation, slack lists notion workflow, keep slack lists and notion in sync, sync slack lists and notion both ways">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Automatic Notion to Slack lists Sync | ListSync">
+    <meta property="og:title" content="Bidirectional Slack lists Notion Sync – Two-Way Real-Time Integration | ListSync">
     <meta property="og:description"
-          content="Stop copying tasks manually. Sync Notion databases with Slack lists in real-time.">
+          content="Two-way sync Slack lists and Notion databases automatically. Real-time bidirectional sync in both directions.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://listsync.app">
     <meta property="og:image" content="https://listsync.app/og-image.jpg">
@@ -135,7 +135,7 @@
                     "name": "Do I need a paid Slack plan to use Slack lists?",
                     "acceptedAnswer": {
                         "@type": "Answer",
-                        "text": "Yes, Slack lists is only available on paid Slack plans including Pro, Business+, or Enterprise Grid. Free Slack workspaces do not have access to the Lists feature."
+                        "text": "Yes, Slack lists is only available on paid Slack plans including Pro, Business+, or Enterprise Grid. Free Slack workspaces do not have access to the lists feature."
                     }
                 }
             ]
@@ -660,9 +660,8 @@
 <main>
     <section class="hero">
         <div class="container">
-            <h1>Sync <span class="gradient-text">Notion databases</span> with <span class="gradient-text">Slack lists</span> automatically</h1>
-            <p>Stop copying tasks manually between Notion and Slack. Two-way real-time sync keeps your databases and
-                Lists perfectly synchronized — no more double work.</p>
+            <h1>Two-Way Sync Between <span class="gradient-text">Slack lists</span> and <span class="gradient-text">Notion Databases</span></h1>
+            <p>Bidirectional Slack lists Notion database integration with real-time sync in both directions. Automatically sync Slack lists to Notion databases and Notion databases to Slack lists — keep tasks synchronized with zero manual work.</p>
             <div class="hero-cta">
                 <a href="mailto:listsync@paauw.dev?subject=Early%20Access%20Request&body=Hi,%0D%0A%0D%0AI'm interested in early access to ListSync.%0D%0A%0D%0AName:%0D%0ACompany:%0D%0ATeam size:"
                    class="email-button">Request Early Access</a>
@@ -673,22 +672,22 @@
 
     <section class="problem">
         <div class="container">
-            <h2>Manual task updates waste your team's time</h2>
+            <h2>Why teams need to sync Slack lists and Notion databases</h2>
             <div class="problem-grid">
                 <div class="problem-card">
-                    <h3>Tasks fall out of sync</h3>
-                    <p>You update a task status in Notion but forget to update Slack. Your team checks Slack and sees
+                    <h3>Slack lists and Notion databases fall out of sync</h3>
+                    <p>You update a task status in your Notion database but forget to update Slack lists. Your team checks Slack lists and sees
                         outdated information, leading to miscommunication and duplicated work.</p>
                 </div>
                 <div class="problem-card">
-                    <h3>Copying takes hours every week</h3>
+                    <h3>Manual copying wastes hours every week</h3>
                     <p>Every task change requires manual updates in both platforms. Teams spend 5-10 hours per week just
-                        keeping Notion databases and Slack lists synchronized.</p>
+                        keeping Notion databases and Slack lists synchronized without automatic sync.</p>
                 </div>
                 <div class="problem-card">
-                    <h3>Important context gets lost</h3>
+                    <h3>Important context gets lost between platforms</h3>
                     <p>Critical decisions made in Slack discussions never make it to your Notion project database. Task
-                        updates in Notion don't trigger notifications in Slack where your team actually works.</p>
+                        updates in Notion don't create Slack lists items where your team actually works.</p>
                 </div>
             </div>
         </div>
@@ -696,8 +695,8 @@
 
     <section class="solution">
         <div class="container">
-            <h2>Automatic bidirectional sync between Notion and Slack lists</h2>
-            <p class="solution-subtitle">Update once, sync everywhere — changes flow automatically in both directions</p>
+            <h2>Sync Slack lists to Notion databases and Notion databases to Slack lists automatically</h2>
+            <p class="solution-subtitle">Real-time bidirectional Slack lists Notion database sync — update once, changes flow automatically in both directions</p>
             <div class="features-grid">
                 <div class="feature-card">
                     <span class="feature-icon">⚡</span>
@@ -707,8 +706,8 @@
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🎯</span>
-                    <h3>All database fields stay synchronized</h3>
-                    <p>Task names, status, assignees, due dates, custom fields — everything syncs automatically. Notion
+                    <h3>All Notion database and Slack list fields stay synchronized</h3>
+                    <p>Task names, status, assignees, due dates, custom fields — everything syncs automatically. Notion database
                         properties map seamlessly to Slack list fields with zero manual configuration.</p>
                 </div>
                 <div class="feature-card">
@@ -719,7 +718,7 @@
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🔄</span>
-                    <h3>Unlimited databases and Lists</h3>
+                    <h3>Unlimited databases and lists</h3>
                     <p>Sync as many Notion databases to as many Slack lists as your team needs. One flat monthly price,
                         no per-task fees, no per-user charges, no hidden costs.</p>
                 </div>
@@ -803,7 +802,7 @@
                     <h3>Does ListSync sync both ways between Notion and Slack?</h3>
                     <p>Yes, ListSync provides true bidirectional synchronization. When you update a task in your Notion
                         database, it automatically syncs to Slack lists. When you or your team changes a task in Slack
-                        Lists, it syncs back to Notion immediately. This eliminates manual copying in both directions
+                        lists, it syncs back to Notion immediately. This eliminates manual copying in both directions
                         and keeps both platforms perfectly synchronized.</p>
                 </div>
                 <div class="faq-item">
@@ -851,8 +850,8 @@
                     <h3>Do I need a paid Slack plan to use Slack lists?</h3>
                     <p>Yes, Slack lists is a premium feature only available on paid Slack plans including Pro,
                         Business+, and Enterprise Grid tiers. Free Slack workspaces do not have access to the Slack
-                        Lists feature. You'll need to upgrade your Slack plan to at least Pro ($7.25/user/month) to use
-                        Lists and sync with Notion.</p>
+                        lists feature. You'll need to upgrade your Slack plan to at least Pro ($7.25/user/month) to use
+                        lists and sync with Notion.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Can I try ListSync before paying?</h3>
@@ -871,7 +870,7 @@
             <div class="resources-grid">
                 <div class="resource-card">
                     <h3>Slack lists Documentation</h3>
-                    <p>Slack's official guide to Lists, including how to create Lists, manage items, and understand
+                    <p>Slack's official guide to lists, including how to create lists, manage items, and understand
                         field types.</p>
                     <a href="https://slack.com/help/articles/27452748828179-Use-lists-in-Slack"
                        class="resource-link" target="_blank" rel="noopener">Read Slack lists Guide →</a>
@@ -898,13 +897,13 @@
 
 <footer>
     <div class="container">
-        <p>&copy; 2025 ListSync. Automatic Notion to Slack lists synchronization.</p>
+        <p>&copy; 2025 ListSync. Bidirectional Slack lists Notion sync — automatic two-way integration.</p>
         <div class="footer-links">
             <a href="mailto:listsync@paauw.dev" class="footer-link">Contact</a>
         </div>
         <p style="margin-top: 16px; font-size: 13px; color: #9ca3af;">
-            Sync Notion databases with Slack lists • Notion Slack lists integration • Two-way Notion Slack sync •
-            Automate Notion to Slack lists • Bidirectional database synchronization
+            Sync Slack lists to Notion • Notion database to Slack lists • Two-way Slack lists Notion sync •
+            Bidirectional Slack lists Notion integration • Export Slack lists to Notion • Create Slack lists from Notion
         </p>
     </div>
 </footer>
